[package]
name = "axum-query-list"
version = "0.1.1"
edition = "2021"
description = "QueryList extractor for axum — deserialize Vec<Enum> from query strings with optional cap"
license = "MIT"
repository = "https://github.com/patelshudhanshu1999-maker/axum-query-list"
keywords = ["axum", "query", "extractor", "enum", "deserialize"]
categories = ["web-programming::http-server"]

[dependencies]
axum-core = "0.5"
axum = "0.8"
form_urlencoded = "1.1"
http = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }